# lite-room

./: .gitignore  AGENTS.md  APP_MOCK_DESIGN.md  ARCHITECTURE.md  BUILD_PLAN.md  Cargo.toml  FIGMA_APP_BLUEPRINT.md  MCP_SETUP_CHECKLIST.md  PHASE_CHECKLIST.md  README.md  SPEC.md
.github/workflows/: ci.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/fs/: clock.rs  mod.rs  scanner.rs  thumbs.rs
crates/adapters/src/presenters/: mod.rs
crates/adapters/src/preview/: mod.rs
crates/adapters/src/sqlite/: mod.rs  queries.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs  ports.rs  service.rs  use_cases.rs
crates/domain/: Cargo.toml
crates/domain/src/: edit.rs  error.rs  image.rs  lib.rs  preview.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: config.rs  logging.rs  main.rs  ui.rs
docs/: CODEBASE_WALKTHROUGH.md  README.md
docs/walkthrough/: 01-overview.md  02-driver-entrypoint.md  03-dependency-rule.md  04-import-flow.md  05-domain-invariants.md  06-other-commands.md  07-apis-and-types.md  08-tests-and-reading-order.md  README.md
skills/benchmarking/: SKILL.md
skills/image-pipeline/: SKILL.md
skills/release-engineering/: SKILL.md
skills/rust-dev/: SKILL.md
skills/sqlite-migrations/: SKILL.md
skills/wgpu-shader/: SKILL.md
src/: main.rs
src/app/: controller.rs  events.rs  mod.rs  state.rs
src/cache/: mod.rs  previews.rs  thumbs.rs
src/catalog/: db.rs  mod.rs  models.rs  queries.rs
src/catalog/migrations/: 0001_initial.sql  mod.rs
src/engine/: export.rs  mod.rs  pipeline.rs  raw_decode.rs  renderer_wgpu.rs
src/infra/: config.rs
src/ui/: app_shell.rs  edit_view.rs  grid_view.rs  histogram.rs  mod.rs
