[package]
name = "lite-room"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", default-features = true, features = ["jpeg"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.17.1"
