[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/adapters",
  "crates/drivers",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[patch.crates-io]
indexmap = { path = "third_party/indexmap-2.13.0" }
