[package]
name = "lite-room-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lite-room"
path = "src/main.rs"

[dependencies]
lite-room-domain = { path = "../domain" }
lite-room-application = { path = "../application" }
lite-room-adapters = { path = "../adapters" }
